--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -104,14 +104,19 @@
                                             <frame key="frameInset" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6k-Vz-0mE">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6k-Vz-0mE">
                                                     <frame key="frameInset" minX="8" minY="11" width="390" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Q6k-Vz-0mE" secondAttribute="trailing" constant="8" id="OQP-1J-8mg"/>
+                                                <constraint firstItem="Q6k-Vz-0mE" firstAttribute="leading" secondItem="Euc-71-drw" secondAttribute="leading" constant="8" id="WQB-0W-nCi"/>
+                                                <constraint firstAttribute="bottom" secondItem="Q6k-Vz-0mE" secondAttribute="bottom" constant="8" id="lAD-jg-N3x"/>
+                                                <constraint firstItem="Q6k-Vz-0mE" firstAttribute="top" secondItem="Euc-71-drw" secondAttribute="top" constant="8" id="nyt-2W-T9h"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="messageLabel" destination="Q6k-Vz-0mE" id="ACA-c9-Nea"/>
