--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -92,34 +92,43 @@
                                     <action selector="onSend:" destination="F3X-c9-jY4" eventType="touchUpInside" id="kLg-3e-xvm"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1yp-pG-dni">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="72" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1yp-pG-dni">
                                 <frame key="frameInset" minY="110" width="414" height="626"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatCell" id="XWp-vp-jiZ" customClass="ChatCell" customModule="ParseChat" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatCell" rowHeight="72" id="XWp-vp-jiZ" customClass="ChatCell" customModule="ParseChat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XWp-vp-jiZ" id="Euc-71-drw">
-                                            <frame key="frameInset" width="414" height="43.666666666666664"/>
+                                            <frame key="frameInset" width="414" height="71.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6k-Vz-0mE">
-                                                    <frame key="frameInset" minX="8" minY="11" width="390" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRw-pY-mJZ">
+                                                    <frame key="frameInset" minX="12" minY="8" width="214" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6k-Vz-0mE">
+                                                    <frame key="frameInset" minX="12" minY="37" width="390" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="Q6k-Vz-0mE" secondAttribute="trailing" constant="8" id="OQP-1J-8mg"/>
-                                                <constraint firstItem="Q6k-Vz-0mE" firstAttribute="leading" secondItem="Euc-71-drw" secondAttribute="leading" constant="8" id="WQB-0W-nCi"/>
-                                                <constraint firstAttribute="bottom" secondItem="Q6k-Vz-0mE" secondAttribute="bottom" constant="8" id="lAD-jg-N3x"/>
-                                                <constraint firstItem="Q6k-Vz-0mE" firstAttribute="top" secondItem="Euc-71-drw" secondAttribute="top" constant="8" id="nyt-2W-T9h"/>
+                                                <constraint firstItem="oRw-pY-mJZ" firstAttribute="top" secondItem="Euc-71-drw" secondAttribute="top" constant="4" id="Axw-To-jkX"/>
+                                                <constraint firstItem="Q6k-Vz-0mE" firstAttribute="leading" secondItem="Euc-71-drw" secondAttribute="leading" constant="8" id="NW1-yT-7CO"/>
+                                                <constraint firstItem="oRw-pY-mJZ" firstAttribute="leading" secondItem="Euc-71-drw" secondAttribute="leading" constant="8" id="UJb-Pc-iIg"/>
+                                                <constraint firstItem="Q6k-Vz-0mE" firstAttribute="top" secondItem="oRw-pY-mJZ" secondAttribute="bottom" constant="8" id="UYg-1G-xI4"/>
+                                                <constraint firstAttribute="bottom" secondItem="Q6k-Vz-0mE" secondAttribute="bottom" constant="8" id="iuu-sQ-xDI"/>
+                                                <constraint firstAttribute="trailing" secondItem="Q6k-Vz-0mE" secondAttribute="trailing" constant="8" id="ypx-EI-X7c"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="messageLabel" destination="Q6k-Vz-0mE" id="ACA-c9-Nea"/>
+                                            <outlet property="usernameLabel" destination="oRw-pY-mJZ" id="8ic-0Q-2EU"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
